--- a/api/package.json
+++ b/api/package.json
@@ -57,12 +57,14 @@
     "@loopback/rest": "^14.0.9",
     "@loopback/rest-explorer": "^7.0.9",
     "@loopback/service-proxy": "^7.0.9",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
     "csv-parser": "^3.1.0",
     "dotenv": "^16.4.7",
     "isemail": "^3.2.0",
+    "jsonwebtoken": "^9.0.2",
     "loopback-connector-mysql": "^7.0.17",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
@@ -71,9 +73,11 @@
   "devDependencies": {
     "@loopback/build": "^11.0.8",
     "@loopback/testlab": "^7.0.8",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^16.18.119",
+    "@types/nodemailer": "^6.4.17",
     "source-map-support": "^0.5.21",
-    "typescript": "~5.2.2",
-    "tsc-watch": "^6.2.1"
+    "tsc-watch": "^6.2.1",
+    "typescript": "~5.2.2"
   }
 }
