login functionality done and clutter removed

--- a/ui/public/manifest.json
+++ b/ui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Minimal UI",
-  "short_name": "Minimal UI",
+  "name": "Fakhri Galvanisers",
+  "short_name": "Fakhri Galvanisers",
   "display": "standalone",
   "start_url": "/",
   "theme_color": "#000000",
