--- a/ui/package.json
+++ b/ui/package.json
@@ -33,6 +33,9 @@
     ]
   },
   "dependencies": {
+    "@dnd-kit/core": "6.0.8",
+    "@dnd-kit/sortable": "7.0.2",
+    "@dnd-kit/utilities": "3.2.1",
     "@auth0/auth0-react": "^2.1.1",
     "@aws-amplify/auth": "^5.4.1",
     "@emotion/cache": "^11.11.0",
